force-app/main/default/objects/Site_Visit_Inspection_Checklist__mdt/Site_Visit_Inspection_Checklist__mdt.object-meta.xml
<CustomObject>
    <label>Site Visit Inspection Checklist</label>
    <pluralLabel>Site Visit Inspection Checklists</pluralLabel>
</CustomObject>