force-app/main/default/objects/Site_Visit_Inspection_Checklist__mdt/fields/Text_Label__c.field-meta.xml
<CustomField>
    <fullName>Text_Label__c</fullName>
    <label>Text Label</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>